# AIR-PONG

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  compile_flags.txt  config.ini  makefile  test.c
inc/: Components.h  Game.h  Utils.h  Vec2.h
include/: Components.h  Entity.h  EntityManager.h  Vec2.h
src/: Components.c  Components.h  Entity.c  Entity.h  EntityManager.c  EntityManager.h  Game.c  Game.h  Physics.c  Physics.h  Utils.c  Vec2.c  Vec2.h  components.c  components.h  entity.c  entity.h  game.c  game.h  ini.c  main.c  vec2.c  vec2.h
x64/Debug/2D-Engine.tlog/: 2D-Engine.lastbuildstate  CL.command.1.tlog
x64/Release/: 2D-Engine.exe.recipe  2D-Engine.iobj  2D-Engine.ipdb  2D-Engine.vcxproj.FileListAbsolute.txt
x64/Release/2D-Engine.tlog/: 2D-Engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
